# mcp

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
examples/: crewai_remote_mcp.py
