[project]
name = "cloud-tools-gateway"
version = "0.1.0"
description = "Cloud-deployable remote MCP tools server for CrewAI agents and ChatGPT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]
